# stimuli

./: .design_notes.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  design_notes.txt  package.xml  setup.py
CleanValves/: CleanValves.ino
DoNothing/: DoNothing.ino
OlfStimDelivery/: 170317_mixtures_stimparams.h  OlfStimDelivery.h  OlfStimDelivery.ino
TestValves/: TestValves.ino
arduino/: README.md
arduino/libraries/stimuli/: keywords.txt  library.properties
arduino/libraries/stimuli/examples/stimuli/: stimuli.ino
arduino/libraries/stimuli/examples/user_defined_functions/: user_defined_functions.ino
arduino/libraries/stimuli/src/: stimuli.cpp  stimuli.h  stimuli.hpp
arduino/libraries/stimuli/test/: CMakeLists.txt  README.md  cmake_testing_todo.txt  gtest.cmake  test  test_.cpp
example_server/: odor_randomizer_mixtures.py  odor_randomizer_zg_rearing.py  odors.py  trial_server.py
firmware/: CMakeLists.txt
launch/: pid.launch  stimuli.launch  stimulus_arduino.launch  test_valves.launch
msg/: DefaultState.msg  Pulse.msg  PulseSeq.msg  Sequence.msg  State.msg  Transition.msg
nodes/: TODO.txt  arduino_latency_test.py  nagel.py  odor_randomizer.py  odor_randomizer_choice.py  stimuli_loader.py  test_arduino.py  test_stimulus.py  test_valves.py  two_choice.py
scripts/: convert_yamls.py
src/stimuli/: stimuli_loader.py  util.py
srv/: LoadDefaultStates.srv  LoadSequence.srv  PulseSeq.srv  TestTransportLoadDefaultStatesReq.srv  TestTransportLoadPulseSeqReq.srv  TestTransportLoadSequenceReq.srv
stimuli/: stimuli.h  stimuli.ino
test_valves/: test_valves.ino
tests/: tests.py
